# FEUP-Prog-Proj2

./: .gitignore  LICENSE  README.md  ´dweqjktwqw
Assets/: test.TXT  testforpp.TXT
BoardBuilder/: CMakeLists.txt  board.cpp  board.h  boardIO.cpp  boardIO.h  color.h  fileExplorer.cpp  main.cpp  menu.cpp  menu.h  word.cpp  word.h
BoardBuilder/BoardBuilder/: CMakeLists.txt  board.cpp  board.h  boardIO.cpp  boardIO.h  color.h  fileExplorer.h  main.cpp  main.h  word.cpp  word.h
ScrabbleJunior/: Board.cpp  Board.h  CMakeLists.txt  Color.h  Game.cpp  Game.h  Graphical.cpp  Graphical.h  IO.cpp  IO.h  Menu.cpp  Menu.h  Player.cpp  Player.h  TopScores.cpp  Word.cpp  Word.h  board.txt  board2.txt  main.cpp  menu.cpp  menu.h  scoreboard.win  topScores.cpp  topScores.h
